--- a/ch15/15.1/nodebird/package.json
+++ b/ch15/15.1/nodebird/package.json
@@ -14,7 +14,8 @@
     "bcrypt": "^5.0.1",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.3",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -27,11 +28,12 @@
     "passport": "^0.6.0",
     "passport-kakao": "1.0.0",
     "passport-local": "^1.0.0",
-    "pm2": "^5.2.0",
-    "redis": "^4.2.0",
+    "pm2": "^5.3.0",
+    "redis": "^4.6.12",
+    "sanitize-html": "^2.11.0",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
-    "winston": "^3.2.1"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "jest": "^24.9.0",
