--- a/ch15/15.1/nodebird/.env
+++ b/ch15/15.1/nodebird/.env
@@ -1,6 +1,6 @@
 COOKIE_SECRET=nodebirdsecret
 KAKAO_ID=5d4daf57becfd72fd9c919882552c4a6
-SEQUELIZE_PASSWORD=nodejsbook
-REDIS_HOST=redis-18954.c92.us-east-1-3.ec2.cloud.redislabs.com
-REDIS_PORT=18954
-REDIS_PASSWORD=JwTwGgKM4P0OFGStgQDgy2AcXvZjX4dc
+SEQUELIZE_PASSWORD=1234
+REDIS_HOST=redis-15947.c322.us-east-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=15947
+REDIS_PASSWORD=nZhxFtcWHOELIO07Hop4bP7bk60rdmFv
